[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-surface"
version = "0.1.0"
description = "Implied volatility surface: SABR/SVI calibration + no-arbitrage checks."
authors = [{name = "superkush06"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
plot = ["matplotlib>=3.7", "numpy>=1.24"]

[tool.setuptools.packages.find]
include = ["volsurf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
